# cht_hurrywave

./: .gitignore  pyproject.toml  readme.md  setup.cfg.ori
cht_hurrywave/: __init__.py  bathymetry.py  boundary_conditions.py  grid.py  hurrywave.py  hurrywave_builder.py  hurrywave_builder.py.ori  hurrywave_domain.py  input.py  mask.py  observation_points.py  quadtree.py  to_xugrid.py  waveblocking.py  xmi.py
examples/: hw_read_model.py  hw_setup.ipynb  hw_setup.py
examples/DanielTest/02_scripts/: 01_HW_analyse.ipynb  1_validate_me_v05_hurrywave.py  Compare_Wind.ipynb  Compare_models.ipynb  Compare_models.py  Compare_models_Daniel.py  Copy_ERA5_Daniel_scratch.sh  DANIEL_model_builder.ipynb  DANIEL_model_builder.py  DANIEL_model_builder_spinup.ipynb  DANIEL_model_builder_yearsim.ipynb  DANIEL_model_builder_yearsim_extended.ipynb  DANIEL_model_builder_yearsim_extended_Sinterklaas.ipynb  Daniel_model_builder_yearsim.py  ERA_5_analysis_support.py  Extract_ERA5_per_node.py  Extract_ERA_5_NorthSea.py  Get_ERA5_CDS_Daniel.py  Get_ERA5_data.ipynb  Get_RWS_data.ipynb  Get_RWS_data_Daniel.py  HurryWave_Wrapper_Daniel.py  Hurrywave_notebook.ipynb  Open1975_wind.ipynb  Postprocess.py  Write_stats.sh  (+36 more)
examples/tmp/: hurrywave.bnd  hurrywave.dep  hurrywave.ds  hurrywave.hs  hurrywave.inp  hurrywave.msk  hurrywave.tp  hurrywave.wd  hurrywave.wnd  run.bat
src/cht_hurrywave.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hurrywave/: __init__.py  bathymetry.py  boundary_conditions.py  hurrywave.py  hurrywave_builder.py  hurrywave_domain.py  observation_points.py
(+5 files in other folders)
