[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "cht_hurrywave"
authors = [
    {name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares-usa.us"},
    {name = "Koen van Asselt", email = "koen.vanassely@deltares.nl"},
]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "numpy",
    "pandas",
    "pyproj",
    "shapely",
    "scipy",
    "xarray",
    "matplotlib",
    "pyyaml",
	"xugrid",
    "toml",
    "affine",
    "datashader",	
    "cht-utils",
]
